# weather-station-db

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
deploy/: .env.example  DEPLOY.md  deploy.sh  setup-orangepi.sh  weather-station-db.service
specs/00-overview/: spec.md
specs/01-kafka-schema/: spec.md
specs/02-ndbc-buoys/: spec.md
specs/03-noaa-isd/: spec.md
specs/04-wmo-oscar/: spec.md
src/weather_station_db/: __init__.py  config.py  main.py  sync_main.py
src/weather_station_db/alerts/: __init__.py  monitor.py  ntfy.py
src/weather_station_db/clients/: __init__.py  isd.py  ndbc.py  nws.py  openmeteo.py  oscar.py
src/weather_station_db/outputs/: __init__.py  csv_writer.py  kafka_writer.py  manager.py  protocols.py
src/weather_station_db/producers/: __init__.py  base.py  isd.py  ndbc.py  nws.py  openmeteo.py  oscar.py
src/weather_station_db/schemas/: __init__.py  enums.py  observation.py  station.py
src/weather_station_db/sync/: __init__.py  influxdb_sync.py  progress_tracker.py
tests/: conftest.py
tests/fixtures/isd/: 72053400164-bad-quality.csv  72053400164-missing.csv  72053400164-sample.csv  isd-history-sample.csv
tests/fixtures/ndbc/: 46025.txt  46025_missing.txt  46025_partial.txt  station_page_46025.html  station_table.txt
tests/fixtures/oscar/: approved_stations_sample.json  search_results_sample.json  station_detail_sample.json  station_missing_coords.json
tests/integration/: conftest.py
tests/unit/: conftest.py  test_main.py
(+10 files in other folders)
